[package]
name = "kappa-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = {version="4.5.9", features= ["derive"]}
derive = "1.0.0"
dotenv = "0.15.0"
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "sched"] }
