[package]
name = "kappa-container"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
clap = {version="4.5.9", features= ["derive"]}
derive = "1.0.0"
dotenv = "0.15.0"
env_logger = "0.11.3"
log = "0.4.22"
nix = { version = "0.29.0", features = ["fs", "hostname", "mount", "sched"] }
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
tokio = { version = "1.38.0", features = ["full"] }
